VQ-365-3: Ability to use advanced filters

--- a/src/app/features/reports-v2/criteria/criteria.component.html
+++ b/src/app/features/reports-v2/criteria/criteria.component.html
@@ -30,7 +30,7 @@
     <ng-container *ngIf="criterion.filter">
       <span class="text-secondary filter-option" style="font-size: 0.8em">
         <i class="pi pi-sort-amount-down"></i>
-        {{ criterion.filter }}
+        {{ criterion.filter }} xxx
       </span>  <br>
     </ng-container>
 
