--- a/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.html
@@ -195,7 +195,7 @@
                                             <p-dropdown id='aggregateMainCover'
                                                         [options]='currency'
                                                         [optionLabel]="'label'"
-                                                        [style]="{ width: '100%', height:'38px' }"
+                                                        [style]="{ width: '100%', height:'38px', 'line-height': '10px' }"
                                                         formControlName='aggregateCoverType' 
                                                         placeholder="Select Cover type"
                                                         >
@@ -211,7 +211,7 @@
                                             <p-dropdown id='aggrgateOverridePremiums'
                                                         [options]='currency'
                                                         [optionLabel]="'label'"
-                                                        [style]="{ width: '100%', height:'38px' }"
+                                                        [style]="{ width: '100%', height:'38px', 'line-height': '10px' }"
                                                         formControlName='aggrgatePremiumMask' 
                                                         placeholder="Select Premium mask"
                                                         >
@@ -227,7 +227,7 @@
                                             <p-dropdown id='aggregateRateDivFactor'
                                                         [options]='currency'
                                                         [optionLabel]="'label'"
-                                                        [style]="{ width: '100%', height:'38px' }"
+                                                        [style]="{ width: '100%', height:'38px', 'line-height': '10px' }"
                                                         formControlName='aggregatePercentageMainYr' 
                                                         placeholder="Select % of Main/yr SA"
                                                         >
@@ -281,7 +281,7 @@
                                             <p-dropdown id='aggregateCoverTypes'
                                                         [options]='currency'
                                                         [optionLabel]="'label'"
-                                                        [style]="{ width: '100%', height:'38px' }"
+                                                        [style]="{ width: '100%', height:'38px', 'line-height': '10px' }"
                                                         formControlName='aggregateSelectRate' 
                                                         placeholder="Select Rate"
                                                         >
@@ -316,7 +316,7 @@
                                             <p-dropdown id='aggregatePercentageMainYr'
                                                         [options]='currency'
                                                         [optionLabel]="'label'"
-                                                        [style]="{ width: '100%', height:'38px' }"
+                                                        [style]="{ width: '100%', height:'38px', 'line-height': '10px' }"
                                                         formControlName='dependantType' 
                                                         placeholder="Select Percentage of..."
                                                         >
@@ -341,16 +341,16 @@
                                 </div>
                             </div>
                             <div class="col-md-4">
-                                <!-- Content B (right side) -->
+                                <!-- Content C (right side) -->
                                 <div>
                                     <div>
-                                        <label class="label" for="aggregateSelectRate">Override premiums</label>
+                                        <label for="aggregateSelectRate">Override premiums</label>
                                     </div>
                                     <div class="form-group">
                                             <p-dropdown id='aggregateSelectRate'
                                                         [options]='currency'
                                                         [optionLabel]="'label'"
-                                                        [style]="{ width: '100%', height:'38px' }"
+                                                        [style]="{ width: '100%', height: '38px', 'line-height': '10px' }"
                                                         formControlName='overridePremiums' 
                                                         placeholder="Select Override premiums"
                                                         >
@@ -502,7 +502,7 @@
                                         <p-dropdown id='premiumMask'
                                                     [options]='currency'
                                                     [optionLabel]="'label'"
-                                                    [style]="{ width: '100%', height: '38px' }"
+                                                    [style]="{ width: '100%', height: '38px', 'line-height': '10px' }"
                                                     formControlName='premiumMask' 
                                                     placeholder="Select premium mask"
                                                     >
@@ -524,7 +524,7 @@
                                         <p-dropdown id='shortDescription'
                                                     [options]='currency'
                                                     [optionLabel]="'label'"
-                                                    [style]="{ width: '100%', height:'38px' }"
+                                                    [style]="{ width: '100%', height:'38px', 'line-height': '10px' }"
                                                     formControlName='shortDescription' 
                                                     placeholder="Select Short desc"
                                                     >
@@ -611,11 +611,11 @@
                           <div class="d-flex justify-content-end">
                             <div class="scrollable-container">
                             <div class="col-xs-12" style="display: inline-block; color: black;">Filter by</div>
-                            <div class="col-md-2 col-sm-12 form-group searchForm" style="display: inline-block; padding-left: 5px;">
+                            <div class="col-md-2 col-sm-12 form-groupp searchForm" style="display: inline-block; padding-left: 5px;">
                                 <p-dropdown id='filterby'
-                                [options]='currency'
+                                [options]='clients'
                                 [optionLabel]="'label'"
-                                [style]="{ width: '100%', height: '38px'}"
+                                [style]="{ width: '100%', height: '38px', 'line-height': '10px'}"
                                 formControlName='filterby' 
                                 placeholder="Select option"
                                 >
@@ -642,25 +642,16 @@
                               >
                             </div>
                             <div class="col-md-2 col-sm-12 searchForm search">
-                                <div class="input-group">
+                                <div class="box">
+                                    <i class="fa fa-search" aria-hidden="true"></i>
                                   <input
                                     type="text"
-                                    pInputText
-                                    class="form-control form-control-sm"
+                                    class="custom-form-control"
                                     formControlName="searchMember"
                                     id="searchMember"
                                     placeholder="Search..."
                                     [style]="{ height: '38px' }"
                                   />
-                                  <div class="input-group-append">
-                                    <button
-                                      type="button"
-                                      class="btn btn-primary btn-sm"
-                                      [style]="{ height: '38px' }"
-                                    >
-                                      <i class="fa fa-search"></i>
-                                    </button>
-                                  </div>
                                 </div>
                               </div>
                               
@@ -745,7 +736,7 @@
                                                  <p-dropdown id='category'
                                                              [options]='currency'
                                                              [optionLabel]="'label'"
-                                                             [style]="{ width: '100%' }"
+                                                             [style]="{ width: '100%', height: '38px', 'line-height': '10px' }"
                                                              formControlName='category' 
                                                              placeholder="Select category"
                                                              >
@@ -784,7 +775,7 @@
                                                      >
                                          </div>
                                      </div>
-                                     <div class="mt-3">
+                                     <div class="mt-4">
                                          <div>
                                              <label for="gender">Gender</label>
                                          </div>
@@ -838,7 +829,7 @@
                                                  <p-dropdown id='currency'
                                                              [options]='currency'
                                                              [optionLabel]="'label'"
-                                                             [style]="{ width: '100%' }"
+                                                             [style]="{ width: '100%', height: '38px', 'line-height': '10px' }"
                                                              formControlName='dependantType' 
                                                              placeholder="Select dependant type"
                                                              >
