--- a/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
@@ -7,6 +7,7 @@
                     <div class="text">Product details</div>
                 </a>
             </div>
+            <!-- <hr class="mx-5 mt-3" style="width: 990px; position: absolute; padding-top: 50px;"> -->
             <div class="col-xs-12 col-sm-4 col-md-4 text-center">
                 <a routerLink="/home/lms/grp/quotation/coverage">
                     <div class="circle">2</div>
@@ -202,7 +203,7 @@
                         </tr>
                     </table>
                 </div>
-                <div class="col-12 text-center mt-5">
+                <div class="col-12 text-center mt-5" style="padding-top: 40px;">
                     <a href="#" style="text-decoration: underline;"
                         (click)="showMembersSummary(); $event.preventDefault();">
                         view members list
@@ -233,7 +234,7 @@
                                     id='filterby'
                                     [options]=''
                                     [optionLabel]="'label'"
-                                    [style]="{ width: '100%', height: '38px' }"
+                                    [style]="{ width: '100%', height: '38px', 'line-height': '10px' }"
                                     formControlName='filterby'
                                     placeholder="Select option">
                                   </p-dropdown>
@@ -264,22 +265,17 @@
                               <div class="col-md-2 col-sm-6 offset-md-3 offset-sm-0 justify-content-end">
                                 <div class="form-group mb-1">
                                   <div class="input-group">
-                                    <input
-                                      type="text"
-                                      pInputText
-                                      class="form-control"
-                                      formControlName="searchMember"
-                                      id="searchMember"
-                                      placeholder="Search..."
-                                      [style]="{ height: '38px' }">
-                                    <div class="input-group-append">
-                                      <button
-                                        type="button"
-                                        class="btn btn-primary btn-sm"
-                                        [style]="{ height: '38px' }">
-                                        <i class="fa fa-search"></i>
-                                      </button>
-                                    </div>
+                                        <div class="box">
+                                            <i class="fa fa-search" aria-hidden="true"></i>
+                                          <input
+                                            type="text"
+                                            class="custom-form-control"
+                                            formControlName="searchMember"
+                                            id="searchMember"
+                                            placeholder="Search..."
+                                            [style]="{ height: '38px' }"
+                                          />
+                                        </div>
                                   </div>
                                 </div>
                               </div>
