--- a/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
@@ -1,26 +1,6 @@
 <div class="container">
     <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-4 col-md-4 text-center">
-                <a routerLink="/home/lms/grp/quotation/quick">
-                    <div class="circle">1</div>
-                    <div class="text">Product details</div>
-                </a>
-            </div>
-            <!-- <hr class="mx-5 mt-3" style="width: 990px; position: absolute; padding-top: 50px;"> -->
-            <div class="col-xs-12 col-sm-4 col-md-4 text-center">
-                <a routerLink="/home/lms/grp/quotation/coverage">
-                    <div class="circle">2</div>
-                    <div class="text">Coverage details</div>
-                </a>
-            </div>
-            <div class="col-xs-12 col-sm-4 col-md-4 text-center">
-                <a routerLink="/home/lms/grp/quotation/summary">
-                    <div class="circle">3</div>
-                    <div class="text">Summary</div>
-                </a>
-            </div>
-        </div>
+        <app-stepper></app-stepper>
     </div>
     <div id="container">
         <div class="col-md-12 text-center">
