--- a/src/app/shared/components/dynamic-chart/dynamic-chart.component.html
+++ b/src/app/shared/components/dynamic-chart/dynamic-chart.component.html
@@ -1,10 +1,5 @@
 
-<div class="row">
-  <div class="row">
-    <p class="text-primary fw-bold set-title">
-      {{ chartTitle | uppercase }} <br>
-    </p>
-  </div>
+<div class="border">
   <p-chart
     [height]="'100%'"
     [type]="chartType"
