--- a/src/app/features/reports-v2/criteria/criteria.component.css
+++ b/src/app/features/reports-v2/criteria/criteria.component.css
@@ -1,5 +1,5 @@
 .pill-box {
-  border: solid 1px #eee;
+  border: solid 1px #00529B;
   margin: 1.2rem 0.2rem 0;
   padding: 5px 0;
   border-radius: 5px;
