--- a/src/app/features/reports-v2/criteria/criteria.component.html
+++ b/src/app/features/reports-v2/criteria/criteria.component.html
@@ -2,11 +2,11 @@
   <div *ngFor="let criterion of criteria" class="col-md-4">
     <div class="row pill-box fadeIn">
 
-      <div class="col-md-9">
+      <div class="col-md-9 text-primary">
         {{ criterion.queryName }}
       </div>
       <div class="col-md-3 text-end">
-        <div class="btn-group">
+        <div class="btn-group me-2">
           <span id="selectCriteriaBtn" (click)="selectCriteria(criterion)" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="pi pi-sort-amount-down text-secondary"></i>
           </span>
@@ -30,7 +30,7 @@
     <ng-container *ngIf="criterion.filter">
       <span class="text-secondary filter-option" style="font-size: 0.8em">
         <i class="pi pi-sort-amount-down"></i>
-        {{ criterion.filter }} xxx
+        {{ criterion.filter }}
       </span>  <br>
     </ng-container>
 
