VQ-714: bug fixes

--- a/src/app/features/reports-v2/list-report/list-report.component.html
+++ b/src/app/features/reports-v2/list-report/list-report.component.html
@@ -36,7 +36,7 @@
               </div>
 
               <div class="card-body" >
-                  {{reportName.charts[0].type |json}}
+                 <!-- {{reportName.charts[0].type |json}}-->
                   <app-dynamic-chart
                     [basicData]="chartData"
                     [chartType]="reportName.charts[0].type"
