--- a/src/app/features/reports-v2/create-dashboard/create-dashboard.component.html
+++ b/src/app/features/reports-v2/create-dashboard/create-dashboard.component.html
@@ -27,7 +27,7 @@
               <ng-container *ngIf="dashboard.chartData">
                 <div class="card-body">
                   <div
-                    *ngIf="shouldShowTable && isPreviewResultAvailable;
+                    *ngIf="dashboard.reports[0].charts[0].type==='table';
                else showChart"
                   >
                     <app-dynamic-table
@@ -38,7 +38,7 @@
                   <ng-template #showChart>
                     <app-dynamic-chart
                       [basicData]="dashboard.chartData"
-                      [chartType]="'bar'"
+                      [chartType]="dashboard.reports[0].charts[0].type"
                     ></app-dynamic-chart>
                   </ng-template>
 
